welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
  do{
    if (isFacingTrail()==true){
      avance()
    } 
  	else {
      droite()
      if (isFacingTrail()==true){
        avance()
      }
    }
  }while (!estSurBicuit())
}

def isFacingTrail():Boolean = {
  var green: Boolean=false
  
  if (estFaceMur()==false){
    avance()
    if (getCouleurSol()==Color.green){
      
      green= true
    }
    recule()
  }
  
  return green

}